Target Java 7 instead of Java 8 for better compatibility with deployment environments

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>OrdsUI</finalName>
+    <finalName>app</finalName>
   </build>
   <artifactId>ui</artifactId>
   <name>ords-ui</name>
