--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.ox.it.ords</groupId>
   <artifactId>ords-ui</artifactId>
   <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
 
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -123,7 +122,7 @@
 	<url>https://github.com/ox-it/ords-ui</url>
 	<connection>scm:git:git://github.com/ox-it/ords-ui.git</connection>
 	<developerConnection>scm:git:git@github.com:ox-it/ords-ui.git</developerConnection>
-  <tag>HEAD</tag>
+  <tag>ords-ui-0.0.1</tag>
 </scm>
 
 
