--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,26 @@
   <build>
     <finalName>app</finalName>
 	<plugins>
+        <plugin>
+            <groupId>org.lesscss</groupId>
+            <artifactId>lesscss-maven-plugin</artifactId>
+            <version>1.7.0.1.1</version>
+            <configuration>
+                <sourceDirectory>${project.basedir}/src/main/webapp/less</sourceDirectory>
+                <outputDirectory>${project.build.directory}/${project.build.finalName}/css</outputDirectory>
+                <compress>true</compress>
+                <includes>
+                    <include>main.less</include>
+                </includes>
+            </configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>compile</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
 		<plugin>
 			<groupId>org.codehaus.mojo</groupId>
 			<artifactId>cobertura-maven-plugin</artifactId>
