--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>uk.ac.ox.it.ords</groupId>
   <artifactId>ords-ui</artifactId>
   <packaging>war</packaging>
-  <version>0.0.31-SNAPSHOT</version>
+  <version>0.0.31</version>
 
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -142,7 +142,7 @@
 	<url>https://github.com/ox-it/ords-ui</url>
 	<connection>scm:git:git://github.com/ox-it/ords-ui.git</connection>
 	<developerConnection>scm:git:git@github.com:ox-it/ords-ui.git</developerConnection>
-  <tag>HEAD</tag>
+  <tag>ords-ui-0.0.31</tag>
 </scm>
 
 
